--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/title.png" style="background-color: whitesmoke;" />
+    <link rel="icon" type="image/png" href="/title.jpg"  />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Time Management Coach</title>
     <script src="https://cdn.jsdelivr.net/npm/react/umd/react.production.min.js" crossorigin></script>
